tests/typing/good/testfile-bounds-2.scala

class C { def m[T >: Null](x: T) : T = x; var y : Any = m[Any](2) }
object Main { def main(args: Array[String]) { } }
