tests/typing/bad/testfile-constant1-1.scala
class A {
    def m() { var x: Boolean = 1 }
}
object Main { def main(args: Array[String]) { } }
